--- a/CRay/CRay.csproj
+++ b/CRay/CRay.csproj
@@ -4,6 +4,11 @@
     <OutputType>Library</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <Version>0.1.0</Version>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <PackageOutputPath>/home/fn/Works/Publish/CRay</PackageOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
